--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,17 +1,28 @@
 spring:
+  thymeleaf:
+    prefix: classpath:/templates/
+    check-template-location: true
+    suffix: .html
+    encoding: UTF-8
+    mode: HTML5
+    cache: false
   profiles:
     active: test
+
   redis:
     database: 0
     host: localhost
     port: 6379
     password: root
     timeout: 5000
+
+
   datasource:
     username: root
     password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/springbootdemo?useUnicode=true&characterEncoding=utf8&serverTimezone=GMT%2B8
+
     druid:
       filters: stat,wall,slf4j,config
       max-active: 100
@@ -26,7 +37,6 @@ spring:
       pool-prepared-statements: true
       max-open-prepared-statements: 50
       max-pool-prepared-statement-per-connection-size: 20
-
 
 
 mybatis:
